--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <version>[4.0,4.1)</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>[20170000,)</version>
