--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </properties>
 
     <groupId>ai.preferred</groupId>
-    <artifactId>venom-example</artifactId>
+    <artifactId>venom-starter-pack</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>ai.preferred</groupId>
             <artifactId>venom</artifactId>
-            <version>[4.0,4.1)</version>
+            <version>[4.0.9,4.1)</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
