--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </properties>
 
     <groupId>ai.preferred</groupId>
-    <artifactId>venom-starter-pack</artifactId>
+    <artifactId>venom-tutorial</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
